--- a/pages/equipmentManagement.html
+++ b/pages/equipmentManagement.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css" />
     <style>
       body {
         font-family: "Inter", sans-serif;
@@ -28,7 +28,11 @@
                   type="button"
                   class="md:hidden p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100"
                 >
-                <img  class="h-6 w-6" src="/assets/images/icons/burgerButton.svg" alt="burgerButton">
+                  <img
+                    class="h-6 w-6"
+                    src="/assets/images/icons/burgerButton.svg"
+                    alt="burgerButton"
+                  />
                 </button>
                 <h1 class="text-xl font-semibold ml-2 md:ml-0">
                   Equipment Management
@@ -46,7 +50,11 @@
             <div class="bg-white rounded-lg shadow p-6">
               <div class="flex items-center">
                 <div class="p-3 rounded-full bg-blue-100 text-blue-600">
-                  <img class="w-6 h-6" src="/assets/images/icons/totalEqupments.svg" alt="totalEquipment">
+                  <img
+                    class="w-6 h-6"
+                    src="/assets/images/icons/totalEqupments.svg"
+                    alt="totalEquipment"
+                  />
                 </div>
                 <div class="ml-4">
                   <h2 class="text-gray-600 text-sm">Total Equipment</h2>
@@ -64,7 +72,11 @@
             <div class="bg-white rounded-lg shadow p-6">
               <div class="flex items-center">
                 <div class="p-3 rounded-full bg-green-100 text-green-600">
-                 <img class="w-6 h-6" src="/assets/images/icons/available.svg" alt="activeFields">
+                  <img
+                    class="w-6 h-6"
+                    src="/assets/images/icons/available.svg"
+                    alt="activeFields"
+                  />
                 </div>
                 <div class="ml-4">
                   <h2 class="text-gray-600 text-sm">Available Equipment</h2>
@@ -82,7 +94,11 @@
             <div class="bg-white rounded-lg shadow p-6">
               <div class="flex items-center">
                 <div class="p-3 rounded-full bg-yellow-100 text-yellow-600">
-                  <img class="w-6 h-6" src="/assets/images/icons/unavailable.svg" alt="unavailable">
+                  <img
+                    class="w-6 h-6"
+                    src="/assets/images/icons/unavailable.svg"
+                    alt="unavailable"
+                  />
                 </div>
                 <div class="ml-4">
                   <h2 class="text-gray-600 text-sm">Unavailable Equipment</h2>
@@ -101,13 +117,45 @@
           <div class="bg-white rounded-lg shadow">
             <div class="p-6">
               <div class="flex justify-between items-center mb-4">
-                <h3 class="text-lg font-semibold">Equipment List</h3>
+                <div>
+                  <h3 class="text-lg font-semibold mb-2">Equipment List</h3>
+                  <div>
+                    <div class="relative">
+                      <input
+                        type="text"
+                        id="tableSearch"
+                        class="block pl-10 pr-3 py-2 border border-gray-300 rounded-md leading-5 bg-white placeholder-gray-500 focus:outline-none sm:text-sm"
+                        placeholder="Search vehicles..."
+                      />
+                      <div
+                        class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
+                      >
+                        <svg
+                          class="h-5 w-5 text-gray-400"
+                          xmlns="http://www.w3.org/2000/svg"
+                          viewBox="0 0 20 20"
+                          fill="currentColor"
+                        >
+                          <path
+                            fill-rule="evenodd"
+                            d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+                            clip-rule="evenodd"
+                          />
+                        </svg>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="flex items-center">
                   <button
                     id="addEquipmentBtn"
                     class="bg-green-500 text-white px-4 py-2 rounded-lg flex items-center hover:bg-green-600"
                   >
-                  <img class="w-5 h-5 mr-2" src="/assets/images/icons/add.svg" alt="add">
+                    <img
+                      class="w-5 h-5 mr-2"
+                      src="/assets/images/icons/add.svg"
+                      alt="add"
+                    />
                     Add Equipment
                   </button>
                 </div>
@@ -117,31 +165,51 @@
                   <table class="min-w-full divide-y divide-gray-200">
                     <thead class="bg-gray-50 sticky top-0">
                       <tr>
-                        <th data-sortable data-field="equipmentId"
-                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <th
+                          data-sortable
+                          data-field="equipmentId"
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
+                        >
                           Equipment ID
                         </th>
-                        <th data-sortable data-field="name"
-                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <th
+                          data-sortable
+                          data-field="name"
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
+                        >
                           Name
                         </th>
-                        <th data-sortable data-field="equipmentType"
-                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <th
+                          data-sortable
+                          data-field="equipmentType"
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
+                        >
                           Equipment Type
                         </th>
-                        <th data-sortable data-field="field"
-                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <th
+                          data-sortable
+                          data-field="field"
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
+                        >
                           Field
                         </th>
-                        <th data-sortable data-field="staff"
-                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <th
+                          data-sortable
+                          data-field="staff"
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
+                        >
                           Staff
                         </th>
-                        <th data-sortable data-field="status"
-                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <th
+                          data-sortable
+                          data-field="status"
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
+                        >
                           Status
                         </th>
-                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                        <th
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+                        >
                           Actions
                         </th>
                       </tr>
@@ -167,7 +235,10 @@
           class="fixed inset-0 h-fit mx-auto my-auto p-5 border w-fit shadow-lg rounded-md bg-white"
         >
           <div class="mt-3">
-            <h3 id="modalTitle"  class="text-lg font-medium leading-6 text-gray-900 mb-4">
+            <h3
+              id="modalTitle"
+              class="text-lg font-medium leading-6 text-gray-900 mb-4"
+            >
               Add Equipment
             </h3>
             <form id="equipmentForm">
@@ -223,8 +294,6 @@
                   </div>
                 </div>
                 <div>
-                 
-
                   <div class="mb-4">
                     <label class="block text-gray-700 text-sm font-bold mb-2"
                       >Staff</label
