--- a/pages/staffManagement.html
+++ b/pages/staffManagement.html
@@ -8,7 +8,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/styles.css" />
     <style>
       body {
         font-family: "Inter", sans-serif;
@@ -27,7 +27,11 @@
                   type="button"
                   class="md:hidden p-2 rounded-md text-gray-400 hover:text-gray-500 hover:bg-gray-100"
                 >
-                <img  class="h-6 w-6" src="/assets/images/icons/burgerButton.svg" alt="burgerButton">
+                  <img
+                    class="h-6 w-6"
+                    src="/assets/images/icons/burgerButton.svg"
+                    alt="burgerButton"
+                  />
                 </button>
                 <h1 class="text-xl font-semibold ml-2 md:ml-0">
                   Staff Management
@@ -45,7 +49,11 @@
             <div class="bg-white rounded-lg shadow p-6">
               <div class="flex items-center">
                 <div class="p-3 rounded-full bg-blue-100 text-blue-600">
-                    <img  class="w-6 h-6" src="/assets/images/icons/totalStaff.svg" alt="totalStaff">
+                  <img
+                    class="w-6 h-6"
+                    src="/assets/images/icons/totalStaff.svg"
+                    alt="totalStaff"
+                  />
                 </div>
                 <div class="ml-4">
                   <h2 class="text-gray-600 text-sm">Total Staff</h2>
@@ -63,7 +71,11 @@
             <div class="bg-white rounded-lg shadow p-6">
               <div class="flex items-center">
                 <div class="p-3 rounded-full bg-green-100 text-green-600">
-                  <img  class="w-6 h-6" src="/assets/images/icons/manager.svg" alt="manager">
+                  <img
+                    class="w-6 h-6"
+                    src="/assets/images/icons/manager.svg"
+                    alt="manager"
+                  />
                 </div>
                 <div class="ml-4">
                   <h2 class="text-gray-600 text-sm">Managers</h2>
@@ -81,7 +93,11 @@
             <div class="bg-white rounded-lg shadow p-6">
               <div class="flex items-center">
                 <div class="p-3 rounded-full bg-yellow-100 text-yellow-600">
-                 <img  class="w-6 h-6" src="/assets/images/icons/otherRoles.svg" alt="other roles">
+                  <img
+                    class="w-6 h-6"
+                    src="/assets/images/icons/otherRoles.svg"
+                    alt="other roles"
+                  />
                 </div>
                 <div class="ml-4">
                   <h2 class="text-gray-600 text-sm">Other Roles</h2>
@@ -100,13 +116,45 @@
           <div class="bg-white rounded-lg shadow">
             <div class="p-6">
               <div class="flex justify-between items-center mb-4">
-                <h3 class="text-lg font-semibold">Staff List</h3>
+                <div>
+                  <h3 class="text-lg font-semibold mb-2">Staff List</h3>
+                  <div>
+                    <div class="relative">
+                      <input
+                        type="text"
+                        id="tableSearch"
+                        class="block pl-10 pr-3 py-2 border border-gray-300 rounded-md leading-5 bg-white placeholder-gray-500 focus:outline-none sm:text-sm"
+                        placeholder="Search vehicles..."
+                      />
+                      <div
+                        class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
+                      >
+                        <svg
+                          class="h-5 w-5 text-gray-400"
+                          xmlns="http://www.w3.org/2000/svg"
+                          viewBox="0 0 20 20"
+                          fill="currentColor"
+                        >
+                          <path
+                            fill-rule="evenodd"
+                            d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+                            clip-rule="evenodd"
+                          />
+                        </svg>
+                      </div>
+                    </div>
+                  </div>
+                </div>
                 <div class="flex items-center">
                   <button
                     id="addStaffBtn"
                     class="bg-green-500 text-white px-4 py-2 rounded-lg flex items-center hover:bg-green-600"
                   >
-                  <img class="w-5 h-5 mr-2" src="/assets/images/icons/add.svg" alt="add">
+                    <img
+                      class="w-5 h-5 mr-2"
+                      src="/assets/images/icons/add.svg"
+                      alt="add"
+                    />
                     Add Staff
                   </button>
                 </div>
@@ -117,31 +165,51 @@
                   <table class="min-w-full divide-y divide-gray-200">
                     <thead class="bg-gray-50 sticky top-0">
                       <tr>
-                        <th data-sortable data-field="staffId"
-                            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <th
+                          data-sortable
+                          data-field="staffId"
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
+                        >
                           Staff ID
                         </th>
-                        <th data-sortable data-field="name"
-                            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <th
+                          data-sortable
+                          data-field="name"
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
+                        >
                           Name
                         </th>
-                        <th data-sortable data-field="designation"
-                            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <th
+                          data-sortable
+                          data-field="designation"
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
+                        >
                           Designation
                         </th>
-                        <th data-sortable data-field="gender"
-                            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <th
+                          data-sortable
+                          data-field="gender"
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
+                        >
                           Gender
                         </th>
-                        <th data-sortable data-field="contactNo"
-                            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <th
+                          data-sortable
+                          data-field="contactNo"
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
+                        >
                           Contact
                         </th>
-                        <th data-sortable data-field="role"
-                            class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100">
+                        <th
+                          data-sortable
+                          data-field="role"
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer hover:bg-gray-100"
+                        >
                           Role
                         </th>
-                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                        <th
+                          class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+                        >
                           Actions
                         </th>
                       </tr>
@@ -166,7 +234,10 @@
           class="fixed inset-0 h-fit mx-auto my-auto p-5 border w-fit shadow-lg rounded-md bg-white"
         >
           <div class="mt-3">
-            <h3 id="modalTitle"  class="text-lg font-medium leading-6 text-gray-900 mb-4">
+            <h3
+              id="modalTitle"
+              class="text-lg font-medium leading-6 text-gray-900 mb-4"
+            >
               Add Staff
             </h3>
             <form id="staffForm">
@@ -189,9 +260,9 @@
                     </label>
                     <input
                       type="text"
-                      id="firstName" 
-                      minlength="3" 
-                      maxlength="50" 
+                      id="firstName"
+                      minlength="3"
+                      maxlength="50"
                       class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                       required
                     />
@@ -203,8 +274,8 @@
                     <input
                       type="text"
                       id="lastName"
-                      minlength="3" 
-                      maxlength="50" 
+                      minlength="3"
+                      maxlength="50"
                       class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                       required
                     />
@@ -216,8 +287,8 @@
                     <input
                       type="text"
                       id="designation"
-                      minlength="3" 
-                      maxlength="50" 
+                      minlength="3"
+                      maxlength="50"
                       class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                       required
                     />
@@ -245,8 +316,8 @@
                     <input
                       type="text"
                       id="addressLine01"
-                      minlength="3" 
-                      maxlength="50" 
+                      minlength="3"
+                      maxlength="50"
                       class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                       required
                     />
